Changelog for GEMC
==================

8/11/16
 - getStringVectorFromString and getStringVectorFromStringWithDelimiter from mlibrary
 - replaceCharInStringWithChars from mlibrary
 - getting timewindow and start time from primary generator
 - rf signal added in event action
 - added rf bank
 - implemented txt and evio rf writers
 - added rf writer to event action

8/10/16
 - mlibrary gstring introduced: string manipulation library. This will replace many methods that do not belong in gemc
 - changelog finalized up to 2/4/2008
 - adding RF option"

8/9/16
 - ctof paddle length in the ctof constants - not derived by dimensions as ctof is now from CAD.
 - getting local position in cad paddle

8/2/16
 - fixed bug that affected gaussian spread of vertex in case z was not centered.

8/1/16
 - added position, rotation tag to GDML
 - fixed cad.gxml naming: removing path from name

7/29/16
 - added two public function to get timewindow and start time from generatorAction

7/28/16
 - added attributes modifier for cad imports:
   - position
   - rotation
 - added CAD and GDML reading of hit definitions
 - protecting against a too low production threshold
 - assigning system to sensitivity so hit definitions can be read properly
 - bug fix: assigning a non empty identifier if SDID cannot be loaded from hit definitions
 - bug fix: existence was not properly managed in run condition. Added bool var to handle cases
   where existence is set in the gcard

7/27/16
 - added possibility of import all CAD files from a directory
 - changed log verbosity for both CAD and GDML 
 - modified github README
 - detector run condition existance set to 0 by default - or non existing volumes will appear

7/22/16
 - fixed CATCH option for detector factory
 - for cad model, reading cad.gxml for new volume attributes
 - added obj format to CAD support

7/21/16
 - finalized CAD factory
 - added check on file existence for GDML factory

7/20/16
 - added CAD factory - work in progress